--- a/style33.css
+++ b/style33.css
@@ -659,8 +659,9 @@ background:rgba(68, 68, 68, 0.199);}
 }
 
 .review .box h3{
-  color:rgb(29, 28, 28);
+  color:red;
   font-size: 2.5rem;
+  font-family:Courier New;
 }
 
 .review .box p{
